rightSidebar padding modified & scrollbar css not working issue fixed.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 /* Scrollbar Style */
-.rightSidebar,
+.rightSidebar::-webkit-scrollbar,
 .feedSidebar::-webkit-scrollbar {
   display: none;
 }
